Bug 107190 - Got seg fault on snb when use INTEL_DEBUG=bat
Summary: Got seg fault on snb when use INTEL_DEBUG=bat
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-11 11:34 UTC by Denis
Modified: 2018-08-07 17:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Denis 2018-07-11 11:34:42 UTC
Hi. During investigating one issue on SNB I faced with another problem:

Appeared during trace replay but shpuld happen to any app on SNB with INTEL_DEBUG=bat
apitrace: warning: caught signal 11
2706: error: caught an unhandled exception
glretrace+0x23e85c
/lib/x86_64-linux-gnu/libpthread.so.0+0x1138f
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: gen_field_iterator_next+0x88b79b: common/gen_decoder.c:1003
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: decode_3dstate_constant+0x887a76: common/gen_batch_decoder.c:578
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: gen_print_batch+0x888414: common/gen_batch_decoder.c:837
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: submit_batch+0x6384e4: /home/test/mesa/src/mesa/drivers/dri/i965/intel_batchbuffer.c:815
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: _intel_batchbuffer_flush_fence+0x638785: /home/test/mesa/src/mesa/drivers/dri/i965/intel_batchbuffer.c:879
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: intel_glFlush+0x5ffa7b: /home/test/mesa/src/mesa/drivers/dri/i965/brw_context.c:247
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: _mesa_flush+0xba689: main/context.c:1854
/home/test/mesa_versions/mesa-latest/lib/dri//i965_dri.so: _mesa_Flush+0xba811: main/context.c:1892
glretrace+0x6039c
glretrace+0xbff3
glretrace+0xc61b
glretrace+0x7e94
/lib/x86_64-linux-gnu/libc.so.6: __libc_start_main+0xef
glretrace: _start+0x28
?
apitrace: info: taking default action for signal 11
Comment 1 Sergii Romantsov 2018-07-11 11:45:29 UTC
Patch proposed:
https://patchwork.freedesktop.org/patch/237720/
Comment 2 Denis 2018-08-07 15:14:59 UTC
hi. We can close this issue as Fixed because patch, provided by Sergey, was pushed to mesa-master
cec540fbc6f00049b8393b70219b6fe0b303b7b0 commit


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.